--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -82,6 +82,7 @@
   const USER_EMAIL = "{{ user.email }}";
   const CREATE_PAYMENT_INTENT_URL = "{% url 'store:create_payment_intent' %}";
   const CHECKOUT_SUCCESS_URL = "{% url 'store:checkout_success' %}";
+  const CART_CLEAR_URL = "{% url 'store:cart_clear' %}";
 </script>
 <script src="https://js.stripe.com/v3/"></script>
 <script src="{% static 'js/checkout.js' %}"></script>
