--- a/store/templates/store/checkout_success.html
+++ b/store/templates/store/checkout_success.html
@@ -1,16 +1,5 @@
-{% extends 'base.html' %}
-{% block title %}Order Successful – FitLife Hub{% endblock %}
-{% block content %}
-<div class="row justify-content-center">
-  <div class="col-md-8 col-lg-6">
-    <div class="card shadow-sm border-0 mt-5">
-      <div class="card-body text-center p-5">
-        <h2 class="mb-3 text-success">Thank You!</h2>
-        <p class="lead">Your order was successful. You will receive a confirmation email shortly.</p>
-        <a href="{% url 'store:product_list' %}" class="btn btn-primary mt-3">Continue Shopping</a>
-        <a href="{% url 'users:profile' %}" class="btn btn-outline-secondary mt-3">Go to Profile</a>
-      </div>
-    </div>
-  </div>
-</div>
-{% endblock %}
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-success">{{ message }}</div>
+  {% endfor %}
+{% endif %}
